fixed header on mobile devices

--- a/anamsite/src/container/Header/Header.css
+++ b/anamsite/src/container/Header/Header.css
@@ -5,12 +5,18 @@
 .app__header-h1 {
     font-family: var(--font-base);
     color: var(--color-golden);
-    letter-spacing: 0.02em;
+    letter-spacing: 0.04em;
     text-transform: uppercase;
-    line-height: 100px;
-    font-size: 65px;
+    line-height: 117px;
+    font-size: 90px;
 }
 
 .app__header-img img {
     width: 80%;
+}
+
+@media screen and (max-width: 845px) {
+    .app__header-h1 {
+        font-size: 45px;
+    }
 }
